--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,7 @@ build:
     # rust: "1.82"
     # golang: "1.23"
 
-# Build documentation in the "docs/" directory with Sphinx
+# Build documentation in the "source/" directory with Sphinx
 sphinx:
   configuration: source/conf.py
 
@@ -27,6 +27,6 @@ sphinx:
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+python:
+   install:
+   - requirements: source/requirements.txt
